# shap-triplet-vit-steering

./: README.md  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: evaluate.py  explain.py  resume_training.py  train.py
src/triplet_steering/: config.py  pipeline.py  utils.py  visualization.py
src/triplet_steering/data/: datamodule.py  dataset.py  preprocessing.py  transforms.py
src/triplet_steering/models/: metadata.py  triplet_vit.py
src/triplet_steering/training/: checkpoints.py  engine.py
src/triplet_steering/xai/: captum_explain.py  shap_selection.py
